fix supervisor config

--- a/templates/gitlab-runner.conf.erb
+++ b/templates/gitlab-runner.conf.erb
@@ -1,4 +1,5 @@
 [program:gitlab-runner]
-command=/usr/bin/gitlab-ci-multi-runner run --working-directory /home/gitlab_ci_multi_runner --config /etc/gitlab-runner/config.toml --service gitlab-runner --syslog --user gitlab_ci_multi_runner
+command=/usr/bin/gitlab-ci-multi-runner run --working-directory /home/gitlab-runner --config /etc/gitlab-runner/config.toml --service gitlab-runner --syslog --user gitlab-runner
 autostart=true
 autorestart=true
+user=root
